pago_crear tipo_pago corregido

--- a/core/templates/pagos/pago_crear.html
+++ b/core/templates/pagos/pago_crear.html
@@ -47,7 +47,7 @@
                             <label for="id_moneda">Moneda:</label>
                             <select name="moneda" id="id_moneda" class="form-control" required>
                                 {% for moneda in monedas %}
-                                    <option value="{{ moneda.id }}">{{ moneda }}</option>
+                                <option value="{{ moneda.id }}" {% if forloop.first %}selected{% endif %}>{{ moneda }}</option>
                                 {% endfor %}
                             </select>
                         </div>
@@ -59,7 +59,7 @@
                             <label for="id_tipo_pago">Tipo de Pago:</label>
                             <select name="tipo_pago" id="id_tipo_pago" class="form-control" required>
                                 {% for tipo_pago in tipos_pago %}
-                                    <option value="{{ tipo_pago.id }}" data-moneda="{{ tipo_pago.moneda }}">{{ tipo_pago }}</option>
+                                <option value="{{ tipo_pago.id }}" data-moneda="{{ tipo_pago.moneda }}">{{ tipo_pago }}</option>
                                 {% endfor %}
                             </select>
                         </div>
@@ -137,7 +137,7 @@
     </div>
 </div>
 <script>
-    document.addEventListener('DOMContentLoaded', function () {
+    window.onload = function () {
         const monedaSelect = document.getElementById('id_moneda');
         const montoInputBolivares = document.getElementById('id_monto_bolivares');
         const montoInputUSD = document.getElementById('id_monto');
@@ -145,10 +145,24 @@
         const tasaDiaDiv = document.getElementById('tasa_dia_div');
         const tipoPagoSelect = document.getElementById('id_tipo_pago');
         const tipoPagoOptions = Array.from(tipoPagoSelect.options);
-        const tasaCambio = {{ tasa_cambio|default:"null" }}; // Asegúrate de pasar la tasa de cambio desde el backend
+        const tasaCambio = "{{ tasa_cambio|default:'null' }}"; // Asegúrate de pasar la tasa de cambio desde el backend
+        const tasaCambioValido = parseFloat(tasaCambio) || null;
 
-        console.log('Tasa de cambio:', tasaCambio);
+        // Función para filtrar los tipos de pago según la moneda seleccionada
+        function filtrarTiposPago() {
+            const monedaSeleccionada = monedaSelect.options[monedaSelect.selectedIndex]?.text.toLowerCase();
 
+            // Limpiar las opciones actuales del select de tipo de pago
+            tipoPagoSelect.innerHTML = '';
+            // Filtrar y agregar las opciones que coincidan con la moneda seleccionada
+            tipoPagoOptions.forEach(option => {
+                const monedaOption = option.getAttribute('data-moneda').toLowerCase();
+                if (monedaOption.includes(monedaSeleccionada)) {
+                    tipoPagoSelect.appendChild(option);
+                }
+            });
+        }
+        filtrarTiposPago();
         // Evento change en el campo de selección de moneda
         monedaSelect.addEventListener('change', function () {
             const selectedOptionText = monedaSelect.options[monedaSelect.selectedIndex].text.toLowerCase();
@@ -184,16 +198,13 @@
         // Función para calcular el valor de referencia
         function calcularValorRef() {
             const montoBolivares = parseFloat(montoInputBolivares.value);
-            if (!isNaN(montoBolivares) && tasaCambio) {
-                const valorRef = (montoBolivares / tasaCambio).toFixed(2);
+            if (!isNaN(montoBolivares) && tasaCambioValido) {
+                const valorRef = (montoBolivares / tasaCambioValido).toFixed(2);
                 montoInputUSD.value = valorRef;
             } else {
                 montoInputUSD.value = '';
             }
         }
-
-        // Llama a la función cuando la página se haya cargado
-        window.onload = calcularValorRef;
 
         // Selecciona el elemento select de cliente
         const clienteSelect = document.getElementById('id_cliente');
@@ -242,27 +253,6 @@
         // Agrega un evento de cambio al select de cliente
         clienteSelect.addEventListener('change', filtrarPrestamos);
 
-        // Llama a la función para filtrar los prestamos al cargar la página
-        filtrarPrestamos();
-
-        // Función para filtrar los tipos de pago según la moneda seleccionada
-        function filtrarTiposPago() {
-            const monedaSeleccionada = monedaSelect.options[monedaSelect.selectedIndex].text.toLowerCase();
-
-            // Limpiar las opciones actuales del select de tipo de pago
-            tipoPagoSelect.innerHTML = '';
-
-            // Filtrar y agregar las opciones que coincidan con la moneda seleccionada
-            tipoPagoOptions.forEach(option => {
-                const monedaOption = option.getAttribute('data-moneda').toLowerCase();
-                if (monedaOption.includes(monedaSeleccionada)) {
-                    tipoPagoSelect.appendChild(option);
-                }
-            });
-        }
-
-        // Llamar a la función al cargar la página para establecer el estado inicial
-        filtrarTiposPago();
-    });
+    };
 </script>
 {% endblock content %}
